[package]
name = "soko"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
fake = { version = "4.4.0", features = ["chrono"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "tls-rustls", "chrono"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["timeout", "trace", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
sqlx-cli = "0.8.6"
